tests/baselines/reference/computedPropertyNames48_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames48_ES5.ts(8,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames48_ES5.ts(8,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames48_ES5.ts(12,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames48_ES5.ts(12,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames48_ES5.ts(16,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames48_ES5.ts(16,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames48_ES5.ts (6 errors) ====
    declare function extractIndexer<T>(p: { [n: number]: T }): T;
    
    enum E { x }
    
    var a: any;
    
    extractIndexer({
        [a]: ""
        ~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        ~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
    }); // Should return string
    
    extractIndexer({
        [E.x]: ""
        ~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        ~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
    }); // Should return string
    
    extractIndexer({
        ["" || 0]: ""
        ~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        ~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
    }); // Should return any (widened form of undefined)